--- a/index.html
+++ b/index.html
@@ -212,22 +212,6 @@
                     <div class="owl-carousel team-carousel">
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
-                                    <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">John Doe</h5>
-                                <span>CEO, Founder</span>
-                            </div>
-                        </div>
-                        <div class="team-item">
-                            <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
@@ -238,8 +222,8 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">Kate Wilson</h5>
-                                <span>Designer</span>
+                                <h5 class="font-weight-bold">Danna Peña</h5>
+                                <span>Directora de recursos humanos</span>
                             </div>
                         </div>
                         <div class="team-item">
@@ -254,8 +238,8 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">John Brown</h5>
-                                <span>Developer</span>
+                                <h5 class="font-weight-bold">Melina Paucar</h5>
+                                <span>Directora de gestión de proyectos y eventos</span>
                             </div>
                         </div>
                         <div class="team-item">
@@ -270,8 +254,56 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">Paul Watson</h5>
-                                <span>Marketer</span>
+                                <h5 class="font-weight-bold">Mayumi Casas</h5>
+                                <span>Directora de investigación</span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Kassandra Tuco</h5>
+                                <span>Directora de alianzas y relaciones públicas</span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Zuly Fiestas</h5>
+                                <span>Directora de diseño y marketing</span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Ariana Narrea</h5>
+                                <span>Directora general</span>
                             </div>
                         </div>
                     </div>
