--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
-                            <h1 class="display-3 text-white mb-md-4">TEXTO</h1>
+                            <h1 class="display-3 text-white mb-md-4">Romper con la estigmatización cultural</h1>
                             <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
-                            <h1 class="display-3 text-white mb-md-4">TEXTO</h1>
+                            <h1 class="display-3 text-white mb-md-4">Conservar y valorar la diversidad</h1>
                             <a href="YAW.pdf" download="Yaw-conocenos" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
-                            <h1 class="display-3 text-white mb-md-4">TEXTO</h1>
+                            <h1 class="display-3 text-white mb-md-4">Formar una mentalidad abierta</h1>
                             <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
@@ -203,10 +203,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Meet The Team</small>
-                    <h1 class="mt-2 mb-3">Meet Experts of Behind Work</h1>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">DIRECTIVA</small>
+                    <h1 class="mt-2 mb-3">CONOCE A LA DIRECTIVA DE YAW</h1>
                     <h4 class="font-weight-normal text-muted mb-4">Eirmod diam magna sed sea rebum, elitr diam dolor lorem ipsum, ipsum stet magna ea diam vero stet vero</h4>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Meet All Experts</a>
+                    <a href="https://wa.me/51979633553" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Contáctate con Ariana Narrea</a>
                 </div>
                 <div class="col-lg-8 mb-5">
                     <div class="owl-carousel team-carousel">
