--- a/index.html
+++ b/index.html
@@ -326,61 +326,71 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item">
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
-                                Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolores tempor voluptua ipsum sanctus clita
+                                En Yaw me siento muy bien, está conformado por excelentes personas las cuales socializan en todo momento con nosotros, considero que ha aportado mucho en mis conocimientos, ya que poco a poco he adquirido nuevos, tanto sus talleres como actividades me han ayudado demasiado tanto en el idioma quechua y otras habilidades, estoy muy agradecida con todo lo brindado, no cabe duda que es lo máximo pertenecer a Yaw.
                             </div>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
-                                    <h6 class="font-weight-bold">Client Name</h6>
-                                    <i class="text-muted">Profession</i>
+                                    <h6 class="font-weight-bold">Allison García</h6>
+                                    <i class="text-muted">Área de investigación</i>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
-                                Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolores tempor voluptua ipsum sanctus clita
+                                Me ha gustado la linda acogida que he tenido, me gusta poder participar desde el interior de esta organización, siento que me ha ayuda a mejorar mis habilidades sociales y espero poder seguir creciendo a nivel personal.
                             </div>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
-                                    <h6 class="font-weight-bold">Client Name</h6>
-                                    <i class="text-muted">Profession</i>
+                                    <h6 class="font-weight-bold">Kiara Sandoval</h6>
+                                    <i class="text-muted">Área de recursos humanos</i>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
-                                Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolores tempor voluptua ipsum sanctus clita
+                                Me siento muy bien ya que puedo compartir con cada una de las personitas acá presentes que son un amor de igual forma por que puede aprender y disfrutar cada momento junto a ustedes.
                             </div>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
-                                    <h6 class="font-weight-bold">Client Name</h6>
-                                    <i class="text-muted">Profession</i>
+                                    <h6 class="font-weight-bold">Diana Mejía</h6>
+                                    <i class="text-muted">Área de gestión de proyectos y eventos</i>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
-                                Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolores tempor voluptua ipsum sanctus clita
+                                En el poco tiempo que he estado en Yaw me ha gustado esta comunidad, esta familia, me gusta las actividades que realizan para seguir fortaleciendo al equipo y he disfrutado las actividades que he realizado, le he puesto todo mi amor.
                             </div>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
-                                    <h6 class="font-weight-bold">Client Name</h6>
-                                    <i class="text-muted">Profession</i>
+                                    <h6 class="font-weight-bold">Tatiana Acosta</h6>
+                                    <i class="text-muted">Área de diseño y marketing</i>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
-                                Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolores tempor voluptua ipsum sanctus clita
-                            </div>
+                                En el poco tiempo que he podido estar en Yaw y en lo que he podido interactuar con la he podido ver la alegría de las personas que componen a esta bonita familia. En este espacio se busca que todos puedan participar, es un lugar donde se guarda respeto a las diferentes opiniones y se incentiva a que más personitas se puedan unir a esta gran familia. Por la Área de investigación, he podido conocer un poco más sobre el Perú y profundizar mis conocimientos sobre mi lugar de origen. Los talleres y las reuniones son muy alegres, divertidas y sobre todo, educativas.                             </div>
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-5.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Client Name</h6>
-                                    <i class="text-muted">Profession</i>
+                                    <i class="text-muted">Área de investigación</i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
+                               Agradezco a esta linda comunidad por ser tan acogedora y hacerme sentir como en mi home, realmente aunque llevo poco tiempo está llena de vida, disfruto mucho de las reuniones, además me han ayudado mucho en adquirir nuevos y buenos conocimientos, los talleres son lo máximo cada una de ellas a aportado demasiado en mí, este espacio se a convertido en mi día a día no sólo por otorgarme alegrías si no por conocer e interactuar con diferentes personitas de nuestro amado Perú y adentrarme más en la diversidad cultural.                 </div>          
+                                <div class="d-flex align-items-center">
+                                <img class="img-fluid rounded-circle" src="img/testimonial-5.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <div class="pl-4">
+                                    <h6 class="font-weight-bold">Lizeth Merlgarejo</h6>
+                                    <i class="text-muted">Área de diseño y marketing</i>
                                 </div>
                             </div>
                         </div>
@@ -457,7 +467,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">Yawar</span><span class="text-primary"></span>Ayllu</h1>
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
