--- a/index.html
+++ b/index.html
@@ -154,15 +154,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Why Choose Us</small>
-                    <h1 class="mt-2 mb-3">25 Years Expereince</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd dolores elitr sed est duo ea ipsum justo diam, est erat lorem</h4>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">DATOS</small>
+                    <h1 class="mt-2 mb-3">MÁS DE YAW</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">Conoce datos tanto interesantes como importantes acerca de Yaw</h4>
                     <div class="list-inline mb-4">
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Lorem ut kasd dolores elitr</p>
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Jsto dolor lorem ipsum</p>
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Diama ipsum est dolor</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Meses de trayectoria que tenemos</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Número de áreas con las que contamos </p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Número de personitas voluntarias en Yaw</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Personas impactadas con la organización</p>
                     </div>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Learn More</a>
+                    
                 </div>
                 <div class="col-lg-6">
                     <div class="row">
@@ -205,14 +206,14 @@
                 <div class="col-lg-4 mb-5">
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">DIRECTIVA</small>
                     <h1 class="mt-2 mb-3">CONOCE A LA DIRECTIVA DE YAW</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Eirmod diam magna sed sea rebum, elitr diam dolor lorem ipsum, ipsum stet magna ea diam vero stet vero</h4>
+                    <h4 class="font-weight-normal text-muted mb-4">En Yaw, estamos comprometidos con la excelencia, la innovación y la visión de un futuro mejor. Somos un equipo apasionado y dedicado que trabaja incansablemente para lograr nuestros objetivos y cumplir nuestra misión.</h4>
                     <a href="https://wa.me/51979633553" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Contáctate con Ariana Narrea</a>
                 </div>
                 <div class="col-lg-8 mb-5">
                     <div class="owl-carousel team-carousel">
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                                <img class="img-fluid w-100" src="img/DANNA PEÑA.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -228,7 +229,7 @@
                         </div>
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                                <img class="img-fluid w-100" src="img/MELINA PAUCAR.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -244,7 +245,7 @@
                         </div>
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                                <img class="img-fluid w-100" src="img/MAYUMI CASAS.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -260,7 +261,7 @@
                         </div>
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                                <img class="img-fluid w-100" src="img/KASSANDRA TUCO.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -276,7 +277,7 @@
                         </div>
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                                <img class="img-fluid w-100" src="img/ZULY FIESTAS.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -312,15 +313,15 @@
         </div>
     </div>
     <!-- Team End -->
+
     <!-- Testimonial Start -->
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-5">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">What clients say</small>
-                    <h1 class="mt-2 mb-3">Clients Say About Our Services</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd elitr sed est duo ea ipsum justo diam, est erat lorem clita diam elitr</h4>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Submit Review</a>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">OPINIONES VOLUNTARIOS</small>
+                    <h1 class="mt-2 mb-3">NUESTROS VOLUNTARIOS DICEN</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">Conoce las diversas opiniones de nuestros voluntarios acerca de como se sienten en Yaw y que significa la organización para ellos.</h4>
                 </div>
                 <div class="col-lg-8 mb-5">
                     <div class="owl-carousel testimonial-carousel">
@@ -353,7 +354,7 @@
                                 Me siento muy bien ya que puedo compartir con cada una de las personitas acá presentes que son un amor de igual forma por que puede aprender y disfrutar cada momento junto a ustedes.
                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/DIANA MEJÍA.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Diana Mejía</h6>
                                     <i class="text-muted">Área de gestión de proyectos y eventos</i>
@@ -378,7 +379,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-5.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
-                                    <h6 class="font-weight-bold">Client Name</h6>
+                                    <h6 class="font-weight-bold">Anathaza Ochonte</h6>
                                     <i class="text-muted">Área de investigación</i>
                                 </div>
                             </div>
@@ -467,15 +468,9 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">Yawar</span><span class="text-primary"></span>Ayllu</h1>
+                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">Y</span>aw<span class="text-primary"></span></h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
@@ -498,19 +493,21 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
-                <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <h5 class="font-weight-bold text-primary mb-4">CONTÁCTANOS</h5>
+                <p>Nos puedes contactar por los siguientes medios</p>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Estamos por todo el mundo      </p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+51 979 633 553</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>yawarayllu6@gmail.com
+
+                </p>
             </div>
         </div>
     </div> 
 
     <div class="container-fluid py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center">
-            &copy; <a class="font-weight-semi-bold">DIANA MICHELLE BARRANTES GALLARDO</a>. Development by
-            <a class="font-weight-semi-bold" href="https://htmlcodex.com">DIMI-STUDIOS</a>
+            &copy; <a class="font-weight-semi-bold" href="https://dimistudios.github.io/DIMI-STUDIOS/">DIANA MICHELLE BARRANTES GALLARDO</a>. Development by
+            <a class="font-weight-semi-bold" href="https://dimistudios.github.io/DIMI-STUDIOS/">DIMI-STUDIOS</a>
         </p>
     </div>
     <!-- Footer End -->
