--- a/index.html
+++ b/index.html
@@ -439,12 +439,13 @@
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
-                                <a class="text-muted ml-2" href="">Taller</a>
+                                <a class="text-muted ml-2" href="">TALLER</a>
                             </div>
                         </div>
                         <a class="h5 font-weight-bold" href="">Completa el formulario y únete a nuestro taller junto con Tantay acerca del suicidio y cómo prevenirlo</a>
                     </div>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -461,23 +462,20 @@
                 <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">ㅤ</h5>
+                <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
-                    <a class="text-white mb-2" ><i ></i>ㅤ </a>
-                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
-                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
-                    <a class="text-white" ><i ></i>ㅤ </a>
+                    <a class="text-white mb-2" href="#" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ACERCA DEL SUICIDIO Y PREVENCIÓN </a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
+                <h5 class="font-weight-bold text-primary mb-4">NUESTRAS REDES</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="https://instagram.com/yaw.pe?igshid=NjIwNzIyMDk2Mg=="><i class="fa fa-angle-right text-primary mr-2"></i>INSTAGRAM</a>
+                    <a class="text-white mb-2" href="https://www.threads.net/@yaw.pe"><i class="fa fa-angle-right text-primary mr-2"></i>THREADS</a>
+                    <a class="text-white mb-2" href="https://www.tiktok.com/@yaw.pe"><i class="fa fa-angle-right text-primary mr-2"></i>TIKTOK</a>
+                    <a class="text-white mb-2" href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA"><i class="fa fa-angle-right text-primary mr-2"></i>BEACONS</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -485,9 +483,7 @@
                 <p>Nos puedes contactar por los siguientes medios</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Estamos por todo el mundo      </p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>+51 979 633 553</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>yawarayllu6@gmail.com
-
-                </p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>yawarayllu6@gmail.com           </p>
             </div>
         </div>
     </div> 
